test_case/rust-lang_rust/54343_423705470.rs

   |
8 |         println!("{}", y); //~ ERROR use of moved value: `y`
   |                       ^ value used here after move
9 |         while true { while true { while true { x = y; x.clone(); } } }
   |                                                   - value moved here in previous iteration of loop
   |
